# esp

./: .gitignore
ESP32_S3/button_test/: esp32_s3_button_test.txt  one_matrix_gpio.c
ESP32_S3/init/: esp32_S3_init_log.txt
basic/common/: analog.md
basic/esp-wroom-32/: esp-wroom-32.xlsx  pin_number.md
examples/ble_hid_device_demo/: flow.txt  sdkconfig
examples/ble_hid_device_demo/docs/: need_to_confirm.txt
examples/ble_hid_device_demo/docs/assigned_numbers/: description.txt
examples/ble_hid_device_demo/main/: CMakeLists.txt  ble_hidd_demo_main.c  esp_hidd_prf_api.c  hid_device_le_prf.c  hidd_le_prf_int.h  matrix_gpio.h
examples/ble_hid_device_demo/main/components/matrix_gpio/: matrix_gpio.c  matrix_gpio.h
examples/bluetooth/ble_keyboard/: CMakeLists.txt  description.md  sdkconfig
examples/bluetooth/ble_keyboard/components/esp_hid/src/: ble_hidd.c
examples/bluetooth/ble_keyboard/main/: CMakeLists.txt  esp_hid_device_main.c  esp_hid_gap.c  esp_hid_gap.h
examples/bluetooth/bluedroid/ble/gatt_server/main/: gatts_demo.c
examples/bluetooth/bluedroid/ble/hid/: CMakeLists.txt
examples/bluetooth/bluedroid/ble/hid/main/: CMakeLists.txt  print_a.c
examples/bluetooth/bluedroid/ble_50/peroidic_sync/: sdkconfig
examples/bluetooth/bluedroid/classic_bt/bt_hid_keyboard_device/: CMakeLists.txt  sdkconfig  to_do_list.md
examples/bluetooth/bluedroid/classic_bt/bt_hid_keyboard_device/main/: main.c
examples/bluetooth/bluedroid/classic_bt/bt_hid_mouse_device/main/: main.c
examples/bluetooth/bluedroid/classic_bt/bt_spp_acceptor/: sdkconfig
examples/bluetooth/bluedroid/classic_bt/bt_spp_acceptor/main/: main.c
examples/bluetooth/blufi/: sdkconfig
examples/esp-now-init-s3/: sdkconfig
examples/esp-now-init-s3/main/: CMakeLists.txt  esp-now-init.c  idf_component.yml
examples/esp-now-init-s3/main/src/: tinyusb_main.c
examples/esp-now-init/main/: esp-now-init.c
examples/esp_now_sender/: CMakeLists.txt
examples/esp_now_sender/main/: CMakeLists.txt
examples/generic_gpio/main/: gpio_example_main.c
examples/hello_world/main/: CMakeLists.txt  hello_world_main.c  xQueue_02_06.c  xQueue_02_07.c  xQueue_02_08.c  xQueue_02_09.c  xQueue_02_10.c  xQueue_02_11.c  xQueue_02_12.c  xQueue_03_13.c  xQueue_03_14.c  xQueue_03_15.c  xQueue_03_16.c
examples/mac_address/: CMakeLists.txt
examples/mac_address/main/: CMakeLists.txt  mac_address.c  mac_address.md
examples/mode_change/: sdkconfig
examples/mode_change/main/: idf_component.yml  main.c
examples/mode_change/main/src/ble/: ble_main.c
examples/mode_change/main/src/esp_now/: esp_now_main.c
examples/mode_change/main/src/hid/: hid.c
examples/mode_change_esp32/: sdkconfig  sdkconfig.old
examples/mode_change_esp32/main/src/esp_now/: esp_now_main.c
examples/mode_change_esp32/main/src/hid/: hid.c
examples/one_matrix_gpio/: CMakeLists.txt
examples/one_matrix_gpio/main/: CMakeLists.txt  one_matrix_gpio.c
examples/peripherals/gpio/validation_pins/: CMakeLists.txt
examples/peripherals/gpio/validation_pins/main/: CMakeLists.txt  validation_pins.c
examples/peripherals/matrix_keyboard_4_by_4/: CMakeLists.txt  docs.md
examples/peripherals/matrix_keyboard_4_by_4/main/: CMakeLists.txt  matrix_keyboard_4_by_4.c
examples/peripherals/usb/device/tusb_hid/: sdkconfig
examples/protocols/http_request/: sdkconfig
examples/protocols/http_request/main/: http_request_example_main.c
examples/wifi/getting_started/station/main/: station_example_main.c
timer_group/legacy_driver/: sdkconfig
to_do_list/: build.md  keyboard.md
wifi/getting_started/softAP/main/: softap_example_main.c
wifi/scan/: sdkconfig
(+9 files in other folders)
